--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,8 +1,7 @@
-@import 'styles/common.scss';
+@import 'styles/common';
 
 .header {
   @extend .flexCenter;
-  width: 100%;
   height: 6rem;
   border-bottom: 1px solid #edeeef;
 
@@ -62,9 +61,9 @@
   }
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 55rem) {
   .header {
-    height: 70px;
+    height: 4.375rem;
 
     .menuBtn {
       display: flex !important;
