--- a/src/components/item-card/ItemCard.module.scss
+++ b/src/components/item-card/ItemCard.module.scss
@@ -6,7 +6,7 @@
   border-radius: 0.75rem;
   overflow: hidden;
   border: 1px solid #ccc;
-  box-shadow: 4px 4px 12px #ccc;
+  box-shadow: 0.25rem 0.25rem 0.75rem #ccc;
 
   img {
     width: 100%;
