--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -58,7 +58,7 @@
     border-bottom: 1px solid #edeeef;
     background: #f9f9f9;
     background: $primaryGreen;
-    box-shadow: 0 4px 10px #aaa;
+    box-shadow: 0 0.25rem 0.625rem #aaa;
 
     ul {
       flex-direction: column;
