--- a/src/components/hero-section/HeroSection.module.scss
+++ b/src/components/hero-section/HeroSection.module.scss
@@ -2,6 +2,7 @@
 
 .heroSection {
   background: $primaryGreen;
+  padding: 2.75rem 0;
 
   .wrapper {
     position: relative;
@@ -9,7 +10,7 @@
     gap: 3rem;
     max-width: 62.5rem;
     margin: 0 auto;
-    padding: 2.75rem 1rem;
+    padding: 0 1rem;
 
     article {
       @extend .flexCol;
