--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,7 +3,7 @@
 .header {
   @extend .flexCenter;
   height: 6rem;
-  border-bottom: 1px solid #edeeef;
+  border-bottom: 1px solid #ccc;
 
   .wrapper {
     position: relative;
