--- a/src/components/hero-section/HeroSection.module.scss
+++ b/src/components/hero-section/HeroSection.module.scss
@@ -28,13 +28,13 @@
         font-family: 'Markazi Text', serif;
         font-size: 2rem;
         letter-spacing: 1.5px;
-        color: #fff;
+        color: white;
       }
 
       p {
         font-family: 'Karla', sans-serif;
         font-size: 1.25rem;
-        color: #fff;
+        color: white;
         max-width: 23rem;
       }
     }
