--- a/src/components/booking-form/BookingForm.module.scss
+++ b/src/components/booking-form/BookingForm.module.scss
@@ -11,21 +11,31 @@
       max-width: 32.5rem;
       margin: 0 auto;
 
+      .divider {
+        margin: 2.5rem 0;
+        border-top: 1px solid $lightGray;
+      }
+
       label,
-      input {
+      input,
+      textarea {
         margin-bottom: 0.75rem;
         font-family: 'Karla', sans-serif;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
       }
     }
   }
 }
 
-.reservationDetails {
+.reservationDetails,
+.contactInfo,
+.paymentDetails,
+.reviewDetails {
   .title {
     font-family: 'Markazi Text', serif;
     font-size: 2.75rem;
     text-align: center;
+    line-height: 0.9;
   }
 
   .container {
@@ -34,12 +44,23 @@
     margin-top: 3rem;
 
     .field {
+      position: relative;
       @extend .flexCol;
 
-      input {
-        padding: 0.5rem 1rem;
+      input,
+      textarea {
+        padding: 0.75rem 1rem;
         border: 1px solid $lightGray;
-        border-radius: 0.75rem;
+        border-radius: 0.5rem;
+
+        &:focus {
+          outline-color: $primaryGreen;
+        }
+      }
+
+      textarea {
+        height: 175px;
+        resize: vertical;
       }
 
       .radioContainer {
@@ -59,6 +80,12 @@
 
       .input {
         margin-left: 1rem;
+      }
+
+      .icon {
+        position: absolute;
+        right: 0.75rem;
+        bottom: 1.25rem;
       }
     }
 
@@ -106,7 +133,40 @@
 
     .btnContainer {
       @extend .justifyEven;
-      margin-top: 3rem;
+      flex-wrap: wrap;
+      gap: 1rem 2rem;
+      margin-top: 2rem;
+    }
+  }
+
+  .detailsContainer {
+    @extend .flexCol;
+    gap: 0.5rem;
+    margin-top: 3rem;
+
+    .item {
+      display: flex;
+      gap: 2rem;
+      font-family: 'Karla', sans-serif;
+
+      .label {
+        min-width: 200px;
+        font-size: 1.25rem;
+        font-weight: 600;
+      }
+
+      .value {
+        font-size: 1.15rem;
+        font-weight: 400;
+        flex: 1;
+      }
+    }
+
+    .btnContainer {
+      @extend .justifyEven;
+      flex-wrap: wrap;
+      gap: 1rem 2rem;
+      margin-top: 2rem;
     }
   }
 }
@@ -115,5 +175,23 @@
   .reservationDetails .field .radioContainer {
     flex-direction: column;
     align-items: start !important;
+  }
+
+  .detailsContainer {
+    gap: 1rem;
+
+    .item {
+      flex-direction: column;
+      gap: 0.15rem !important;
+
+      .label {
+        font-weight: 700;
+      }
+
+      .value {
+        margin-left: 1.5rem;
+        text-align: center;
+      }
+    }
   }
 }
