--- a/src/components/dropdown/Dropdown.module.scss
+++ b/src/components/dropdown/Dropdown.module.scss
@@ -63,6 +63,12 @@
       font-weight: 600;
       color: $primaryGreen;
       cursor: pointer;
+      transition: all 0.2s;
+
+      &:hover {
+        background: $primaryGreen;
+        color: white;
+      }
     }
   }
 
@@ -74,6 +80,10 @@
   .hideList {
     animation: hideList 0.2s;
   }
+}
+
+.timesDropdown ul li {
+  letter-spacing: 2px;
 }
 
 @keyframes showList {
