Created New Dropdown

--- a/src/components/booking-form/BookingForm.module.scss
+++ b/src/components/booking-form/BookingForm.module.scss
@@ -85,6 +85,10 @@
         margin-bottom: 1rem;
       }
 
+      .dropdownErr {
+        top: 4.9rem;
+      }
+
       .icon {
         position: absolute;
         right: 0.75rem;
