--- a/src/components/dropdown/Dropdown.module.scss
+++ b/src/components/dropdown/Dropdown.module.scss
@@ -3,111 +3,41 @@
 .dropdown {
   position: relative;
   width: 100%;
-  margin-bottom: 0.75rem;
-  z-index: 2;
+  margin-top: -0.5rem;
 
-  .header {
-    position: relative;
-    @extend .alignCen;
-    justify-content: space-between;
-    background: $lightGrayishBlue;
-    border-radius: 0.5rem;
-    padding: 0.5rem 1.25rem;
-    cursor: pointer;
-
-    span {
-      font-family: 'Karla', sans-serif;
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: $primaryGreen;
-    }
-  }
-
-  .active {
-    background: $primaryGreen;
-    justify-content: center;
-
-    span {
-      color: #fff;
-    }
-
-    .dropdownIcon {
-      position: absolute;
-      right: 1.25rem;
-
-      svg path {
-        fill: white;
-      }
-    }
-  }
-
-  ul {
+  .icon {
     position: absolute;
-    list-style: none;
-    @extend .flexColCen;
+    top: 1.25rem;
+    left: 1rem;
+  }
+
+  .arrow {
+    position: absolute;
+    transform: scale(0.9);
+    top: 1.35rem;
+    right: 1rem;
+  }
+
+  select {
     width: 100%;
     margin-top: 0.625rem;
-    transition: all 0.3s;
-    transform-origin: top;
-    transform: scaleY(0);
-    display: none;
+    padding: 0.5rem;
+    background: $lightGrayishBlue;
+    border: none;
+    outline: none;
+    border-radius: 0.5rem;
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: $primaryGreen;
 
-    li {
-      width: 100%;
-      padding: 0.5rem 0;
-      text-align: center;
-      background: $lightGrayishBlue;
-      border-bottom: 1px dashed black;
-      font-family: 'Karla', sans-serif;
-      font-size: 1.5rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    .option {
       font-weight: 600;
-      color: $primaryGreen;
-      cursor: pointer;
-      transition: all 0.2s;
-
-      &:hover {
-        background: $primaryGreen;
-        color: white;
-      }
     }
-  }
-
-  .showList {
-    display: flex;
-    animation: showList 0.3s forwards;
-  }
-
-  .hideList {
-    animation: hideList 0.2s;
-  }
-}
-
-.timesDropdown ul li {
-  letter-spacing: 2px;
-}
-
-@keyframes showList {
-  from {
-    transform: scaleY(0);
-    opacity: 0;
-  }
-
-  to {
-    transform: scaleY(1);
-    opacity: 1;
-  }
-}
-
-@keyframes hideList {
-  from {
-    display: flex;
-    transform: scaleY(1);
-    opacity: 1;
-  }
-
-  to {
-    transform: scaleY(0);
-    opacity: 0;
-    display: none;
   }
 }
