Created ConfirmedBooking Page

--- a/src/components/booking-details/BookingDetails.module.scss
+++ b/src/components/booking-details/BookingDetails.module.scss
@@ -3,8 +3,7 @@
 .bookingDetails {
   width: 100%;
   max-width: 48rem;
-  margin: 0 1rem;
-  margin-top: 3rem;
+  margin: 0 auto;
   font-family: 'Karla', sans-serif;
   font-size: 1.25rem;
 
