--- a/src/components/item-card/ItemCard.module.scss
+++ b/src/components/item-card/ItemCard.module.scss
@@ -26,14 +26,14 @@
 
       .price {
         font-family: 'Karla', sans-serif;
-        color: $orange;
+        font-weight: 600;
       }
     }
 
     .desc {
       margin-top: 1rem;
       font-family: 'Karla', sans-serif;
-      color: $primaryGreen;
+      font-weight: normal;
     }
 
     a {
